feat: AWS Lambda 실제 배포 성공 🚀
- CGO_ENABLED=0으로 정적 컴파일 (GLIBC 호환성 문제 해결)
- template.yaml CodeUri를 function.zip으로 변경
- API Gateway 로깅 설정 단순화 (CloudWatch role 문제 해결)
- samconfig.toml 설정 추가
- deploy.sh 스크립트 개선

배포 결과:
✅ API Endpoint: https://w2z3biq5nb.execute-api.ap-northeast-2.amazonaws.com/dev
✅ Lambda Function: mcp-server-dev
✅ CloudWatch Logs: /aws/lambda/mcp-server-dev

테스트 완료:
✅ GET / - 헬스체크
✅ POST /mcp (initialize) - MCP 초기화
✅ POST /mcp (tools/list) - 도구 목록
✅ POST /mcp (resources/list) - 리소스 목록
✅ POST /mcp (prompts/list) - 프롬프트 목록

--- a/template.yaml
+++ b/template.yaml
@@ -35,7 +35,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: !Sub "mcp-server-${Environment}"
-      CodeUri: .
+      CodeUri: function.zip
       Handler: bootstrap
       Architectures:
         - x86_64
@@ -66,13 +66,6 @@ Resources:
     Properties:
       Name: !Sub "mcp-server-api-${Environment}"
       StageName: !Ref Environment
-      TracingEnabled: true
-      MethodSettings:
-        - ResourcePath: '/*'
-          HttpMethod: '*'
-          LoggingLevel: INFO
-          DataTraceEnabled: true
-          MetricsEnabled: true
 
   # CloudWatch 로그 그룹
   MCPServerLogGroup:
