AWS CDK 배포 설정 완료
- CDK 스택 구조 수정 (mcp_lambda_stack.py)
  - Runtime을 PROVIDED_AL2023으로 변경
  - Lambda 코드 경로를 lambda_dist로 최적화
  - 불필요한 CloudWatch 로그 그룹 제거
  - Import 정리 (RemovalPolicy, CfnOutput)
- CDK app.py에서 계정 정보 설정
- cdk.json에 exclude 패턴 추가
- .gitignore에 lambda_dist 추가

배포 완료:
- API: https://hofgeg1g01.execute-api.ap-northeast-2.amazonaws.com/dev/mcp
- Lambda: mcp-server-stack-MCPServerFunctionA0453C57-YLeZCwqorN2N
- 모든 MCP 엔드포인트 테스트 성공

--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,22 @@ dist/
 # Python
 .venv/
 venv/
+cdk/venv/
 __pycache__/
 *.py[cod]
 *$py.class
+
+# AWS CDK
+cdk/venv/
+cdk.out/
+cdk.context.json
+*.cdk.json.bak
+
+# Terraform (향후 사용 가능)
+*.tfstate
+*.tfstate.*
+.terraform/
+.terraform.lock.hcl
 *.egg-info/
 
 # IDE
